[package]
name = "converse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = "0.18"
gdk = "0.18"
gtk-layer-shell = "0.8"
tokio = { version = "1.36", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
toml = "0.8"
async-channel = "2.2"
regex = "1.10"
phf = { version = "0.11", features = ["macros"] }
clap = { version = "4.5.4", features = ["derive"] }

[profile.release]
# opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'
strip = true
